@@ -1,3 +1,7 @@
+2025-09-23  Zhengyi Fu  <i@fuzy.me>
+
+	* init.el (dotemacs-theme-disable): New command.
+
 2025-09-22  Zhengyi Fu  <i@fuzy.me>
 
 	Introduce doom-modeline
